Refact : AccountApplicationService#getTargets 수정
###작업 내용###
- 가독성을 위해 타입 추론 변수로 수정
- 내부 메서드 로직 변경
- 단위 테스트 수정